--- a/backend/views/email/baseEmail.pug
+++ b/backend/views/email/baseEmail.pug
@@ -38,6 +38,8 @@ html
                       td.content-block
                         span.apple-link BIOSSA - KNUST, College of Science, KNUST - Kumasi
                         br
+                        span.apple-link Department of Theoretical and Applied Biology, College of Science, KNUST - Kumasi
+                        br
                         |  Don't like these emails? 
                         a(href='#') Unsubscribe
           //- td  
