--- a/backend/views/email/verify.pug
+++ b/backend/views/email/verify.pug
@@ -12,7 +12,7 @@ block content
             tbody
               tr
                 td
-                  a(href=`${url}`, target='_blank') Update user info
+                  a(href='#', target='_blank') Account Verified
   p If you need any help with any issue, please don't hesitate to contact the executives!
   p - BIOSSA - Life
   p - BIOSSA - KNUST
